Revision history for Perl extension HTML::Template::Compiled.

0.97_001
- fix HTML::Template::Compiled::Classic: allow every character in template
  var names (RT 70676)
- New option expire_time instead of global HTML::Template::Compiled->ExpireTime

0.97 Tue May  8 19:19:00 CEST 2012
- regular release, see changes from dev version below

0.96_005 Sun May  6 16:24:54 CEST 2012
- fix t/25_expr.t number of skip tests

0.96_004 Sat May  5 15:56:27 CEST 2012
- Minor bugfix USE_VARS, module version numbers
- Bugfix caching: under certain circumstances some template includes
  were not added to memory cache and reloaded from file cache very time

0.96_003 Fri May  4 17:09:19 CEST 2012
- Improved Feature: expressions like .path.to.hash{var}

0.96_002 Sun Apr 22 19:23:33 CEST 2012
- Changed/New feature: chomp whitespaces globally or in tags
- New feature: SET_VAR (and USE_VARS)

0.96_001 Sat Apr 21 23:17:59 CEST 2012
- New feature: allow expressions like .path.to.hash{var}
- Bugfix: allow more than two binary operands in H::T::C::Expr

0.96 Mon Nov 21 20:37:22 CET 2011
- fixed 05_filter.t
- fixed t/01_HTML-Template-Compiled.t (problems when test takes longer then
  cache expiration)

0.95_003 Sat Nov 12 15:12:02 CET 2011
- Bugfix: Reload includes of includes (required change of caching mechanism -
  please report any issues if you have problems with caching)
- New Escape: 'IJSON'
- Deprecated the use options 'speed', 'compatible' and 'short'

0.95_002 Mon Oct 31 21:00:51 CET 2011
- HTML::Template Compatibility: lowercase instead of uppercase
  parameters when case_sensitive 0

0.95_001 Sun Aug 28 19:02:00 CEST 2011
- Bugfix: escape=js escapes backslash now (RT 66463)
- Bugfix: H::T::C::Classic ignored case_sensitive (RT 70412)
- Added Template::AutoFilter to bench.pl

0.95 Wed Apr 27 20:48:13 CEST 2011
- Just moving developer release to regular release

0.94_002 Thu Aug 19 23:43:41 CEST 2010
- Fix for 5.12: ignore Storable fatal error abour regexp items.