@@ -1,7 +1,8 @@
 # Before `make install' is performed this script should be runnable with
 # `make test'. After `make install' it should work as `perl HTML-Template-Compiled.t'
 # $Id: 01_HTML-Template-Compiled.t 1136 2011-11-21 19:35:19Z tinita $
-
+use strict;
+use warnings;
 use Test::More tests => 6;
 use Data::Dumper;
 local $Data::Dumper::Indent = 1; local $Data::Dumper::Sortkeys = 1;
